Added a couple decorators that should help me check myself: @Stub (for creating stub classes) and @override (for ensuring instance methods have the same signatures as their parents)

--- a/AppEngine/pcs/view/html/login.html
+++ b/AppEngine/pcs/view/html/login.html
@@ -7,7 +7,7 @@
   
   <body>
     <h1>Please Login</h1>
-    <form action="/session" method="POST">
+    <form action="/session.html" method="POST">
       <label for="username">User ID:</label>
       <input type="text" value="{{ username }}" name="username" />
       <label for="password">Password:</label>
