--- a/AppEngine/pcs/view/html/session_base.html
+++ b/AppEngine/pcs/view/html/session_base.html
@@ -14,7 +14,7 @@
       
       <h1>You must be logged in</h1>
       <p>Check your username and password and 
-        <a href="/login">try again</a>.</p>
+        <a href="/login.html">try again</a>.</p>
       
     {% endif %}
   </body>
