--- a/AppEngine/pcs/view/html/login.html
+++ b/AppEngine/pcs/view/html/login.html
@@ -8,10 +8,14 @@
   <body>
     <h1>Please Login</h1>
     <form action="/session.html" method="POST">
-      <label for="username">User ID:</label>
-      <input type="text" value="{{ username }}" name="username" />
-      <label for="password">Password:</label>
-      <input type="password" name="password" />
+      <div>
+        <label for="username">User ID:</label>
+        <input type="text" value="{{ username }}" name="username" />
+      </div>
+      <div>
+        <label for="password">Password:</label>
+        <input type="password" name="password" />
+      </div>
       <input type="submit" />
     </form>
   </body>
