--- a/AppEngine/pcs/view/html/session_home.html
+++ b/AppEngine/pcs/view/html/session_home.html
@@ -39,7 +39,7 @@
         </div>
       {% endif %}
       
-      <p><a href="/availability.html">Make a New Reservation</a></p>
+      <p><a href="/locations.html">Make a New Reservation</a></p>
       <p><a href="">View Messages</a></p>
       <p><a href="">Manage Account Info</a></p>
       <p><a href="">Give Feedback</a></p>
