Changed addresses referring to availability to vehicles

--- a/AppEngine/pcs/view/html/locations.html
+++ b/AppEngine/pcs/view/html/locations.html
@@ -47,7 +47,7 @@
       <a class="edit-link" href="#{{ location.id }}">
         <span>Edit</span>
       </a>
-      <a class="reserve-near-link" href="/availability.html?location_id={{ location.id }}">
+      <a class="reserve-near-link" href="/vehicles.html?location_id={{ location.id }}">
         <span class="location-name">{{ location.name }}</span>
         <span class="location-desc">{{ location.desc }}</span>
       </a>
