Some cosmetic enhancements to the html templates.  Also, tailored the location html view and vehicles html wsgi input to expect different things from dates and times.

--- a/AppEngine/pcs/view/html/available_cars.html
+++ b/AppEngine/pcs/view/html/available_cars.html
@@ -6,13 +6,13 @@
   
   <style>
     .available-vehicle {
-      background-color: #efe;
+      background-color: #ded;
     }
     .unavailable-vehicle {
-      background-color: #fee;
+      background-color: #edd;
     }
     .partially-available-vehicle {
-      background-color: #ffe;
+      background-color: #eed;
     }
     
     .availability-options span,
