--- a/AppEngine/pcs/view/html/session_home.html
+++ b/AppEngine/pcs/view/html/session_home.html
@@ -39,10 +39,12 @@
         </div>
       {% endif %}
       
-      <p><a href="/locations.html">Make a New Reservation</a></p>
-      <p><a href="">View Messages</a></p>
-      <p><a href="">Manage Account Info</a></p>
-      <p><a href="">Give Feedback</a></p>
+      <ul>
+        <li><a href="/locations.html">Make a New Reservation</a></li>
+        <li><a href="">View Messages</a></li>
+        <li><a href="">Manage Account Info</a></li>
+        <li><a href="">Give Feedback</a></li>
+      </ul>
       
 {% endblock content %}
 
