--- a/AppEngine/pcs/view/html/session_base.html
+++ b/AppEngine/pcs/view/html/session_base.html
@@ -4,6 +4,7 @@
   <head>
     <title>PhillyCarShare -{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="/styles/pcs-basic-html.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable = no" />
   </head>
   
   <body>
