--- a/AppEngine/pcs/view/html/session_base.html
+++ b/AppEngine/pcs/view/html/session_base.html
@@ -14,9 +14,9 @@
       
     {% else %}
       
-      <h1>You must be logged in</h1>
+      <h1>Sorry!</h1>
       <p>{{ error_msg }}</p>
-      <p>Please <a href="/login.html">try again</a>.</p>
+      <p>Please <a href="/login.html">login again</a>.</p>
       
     {% endif %}
   </body>
