Changed my mind on the names of the vehicles modules.  I think that information about availabilities (whatever an availability is) is being requested.  I think this includes information about vehicles, but not just.

--- a/AppEngine/pcs/view/html/vehicle_info.html
+++ b/AppEngine/pcs/view/html/vehicle_info.html
@@ -52,6 +52,16 @@
       </tr>
     </table>
     
+    <form method="POST" action="/reservations.html">
+      <input type="hidden" name="start_time" value="{{ start_stamp }}" />
+      <input type="hidden" name="end_time" value="{{ end_stamp }}" />
+      <input type="hidden" name="vehicle_id" value="{{ vehicle.id }}" />
+      
+      <input type="hidden" name="add[stack_pk]" value="vehicle.id" />
+      <input type="hidden" name="mv_action" value="add" />
+      <input type="hidden" name="add[tid]" value="10" />
+      <input type="submit" value="Reserve It" />
+    </form>
   </div>
   
 {% endblock content %}
