Updated the form in the locations html view to point to the locations availability handler

--- a/AppEngine/pcs/view/html/locations.html
+++ b/AppEngine/pcs/view/html/locations.html
@@ -53,7 +53,7 @@
   
   <h1>New Reservation</h1>
   
-  <form action="/availability.html" method="GET">
+  <form action="/locations/.form/availability.html" method="GET">
     From:
     <input name="start_date" type="date" value="{{ start_time|date:"Y-m-d" }}" size="10" />
     at
