--- a/AppEngine/pcs/view/html/session_home.html
+++ b/AppEngine/pcs/view/html/session_home.html
@@ -41,6 +41,7 @@
       
       <ul>
         <li><a href="/locations.html">Make a New Reservation</a></li>
+        <li><a href="/reservations.html">See Reservations</a></li>
         <li><a href="">View Messages</a></li>
         <li><a href="">Manage Account Info</a></li>
         <li><a href="">Give Feedback</a></li>
